--- a/index.html
+++ b/index.html
@@ -38,9 +38,29 @@
             </a>
         </div>
         <br>
-        <a href="#projects">
+        <a href="#about">
             <button class="discoverButton" onclick="createRain()">Discover the future</button>
         </a>
+    </section>
+
+    <section class="about-place" id="about">
+        <h1>About me</h1>
+        <p class="about-text">
+            <i>I devote my time to Imagining and Creating the Future of the Humanity 🌐. A future we all want.</i>
+
+            Hi i'm JdM. I'm passionate about development. As a computer science student I use my skills in this field to
+            innovate and create while contributing to a more free, open and secure internet.
+
+            Far beyond the digital realm, I want to bring my motivation to the real world by sharing my ideas and my
+            determination to improve the world.
+
+            I would like to build a world of innovation. A more free world. A world where online privacy is not
+            violated. A more prosperous world. A more sustainable world. But also a world of peace.
+
+            <b>A world that would benefit all of humanity.</b>
+
+            I believe that many people are aware of these issues. My goal is to imagine <b>solutions</b>.
+        </p>
     </section>
 
     <section class="projects-place" id="projects">
