--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         <h4>Monero :</h4>
         <p>49pyL3WPqfqfaLweCYFYbsWQi2bvKqmAHixewxnDBi32DKiPQz9kgJ5g6VnvENLqWbD5iGasQQvG7GVVg6B3HYu5Gqx4JSn</p>
     </div>
+    <br><br>
+    <footer>
+        <p><img src="nocopyright.svg" alt="No copyright" width="25"> No rights reserved.</p>
+    </footer>
 </body>
 
 </html>
