--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $articles = array_reverse($articles);
         <li><a href="#support">Support my work</a></li>
     </ul>
     <br>
-    <h2 id="social">Social :</h2>
+    <h2 id="social">Social & Contact :</h2>
     <ul>
         <li><a href="https://github.com/judemont">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/julien-de-montmollin/">Linkedin</a></li>
@@ -96,11 +96,15 @@ $articles = array_reverse($articles);
     <ul>
         <li>
             <a href="https://futureofthe.world" target="_blank" rel="noreferrer">FutureOfThe.World</a>
-            - Future Of The World
+            - Future Of The World 🌐 (Try it)
         </li>
         <li>
             <a href="https://futureofthe.tech" target="_blank" rel="noreferrer">FutureOfThe.Tech</a>
-            - Future Of The Tech
+            - My presentation site
+        </li>
+        <li>
+            <a href="https://futureofthe.tech/blog" target="_blank" rel="noreferrer">FutureOfThe.Tech/Blog</a>
+            - My blog
         </li>
     </ul>
     <h3>Tools :</h3>
@@ -108,6 +112,10 @@ $articles = array_reverse($articles);
         <li>
             <a href="https://github.com/judemont/netexplorer" target="_blank" rel="noreferrer">NetExplorer</a>
             - Web analysis tool
+        </li>
+        <li>
+            <a href="https://github.com/judemont/Bloggy" target="_blank" rel="noreferrer">Bloggy</a>
+            - Create your own blog and share your ideas with Bloggy!
         </li>
         <li>
             <a href="https://github.com/judemont/Video-to-CSS" target="_blank" rel="noreferrer">Video to CSS</a>
