--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ $articles = array_reverse($articles);
     <ul>
         <li><a href="#social">Social</a></li>
         <li><a href="#about">About Me</a></li>
+        <li><a href="#blog">Articles by me</a></li>
         <li><a href="#projects">My Projects</a></li>
         <li><a href="#things">Things I Use</a></li>
-        <li><a href="#blog">Articles by me</a></li>
         <li><a href="#support">Support my work</a></li>
     </ul>
     <br>
@@ -63,6 +63,18 @@ $articles = array_reverse($articles);
         <br><br>
         I believe that many people are aware of these issues. My goal is to imagine <b>solutions</b>.
     </p>
+    <br>
+    <h2 id="blog">Articles by <i>Me</i></h2>
+    <p>I've written a few articles on interesting subjects. You can find them on my <a href="blog/">blog</a>.</p>
+    <p><a href="blog/articles.xml">RSS feed</a></p>
+    <br>
+    <h2>My instances</h2>
+    <ul>
+        <li>
+            <a href="https://search.futureofthe.tech">SearxNg</a>
+            <a href="https://piped.futureofthe.tech">Piped</a>
+        </li>
+    </ul>
     <br>
     <h2 id="projects">My Projects</h2>
     <h3>Android apps :</h3>
@@ -163,10 +175,7 @@ $articles = array_reverse($articles);
         <li>Phone: <a href="https://fairphone.com">Fairphone 5</a></li>
 
     </ul>
-    <br>
-    <h2 id="blog">Articles by <i>Me</i></h2>
-    <p>I've written a few articles on interesting subjects. You can find them on my <a href="blog/">blog</a>.</p>
-    <p><a href="blog/articles.xml">RSS feed</a></p>
+
     <br>
     <h2 id="support">Support My Work</h2>
     <div class="support">
