--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ $articles = array_reverse($articles);
         <li><a href="#social">Social</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#blog">Articles by me</a></li>
+        <li><a href="#instances">Instances</a></li>
         <li><a href="#projects">My Projects</a></li>
         <li><a href="#things">Things I Use</a></li>
         <li><a href="#support">Support my work</a></li>
@@ -68,7 +69,7 @@ $articles = array_reverse($articles);
     <p>I've written a few articles on interesting subjects. You can find them on my <a href="blog/">blog</a>.</p>
     <p><a href="blog/articles.xml">RSS feed</a></p>
     <br>
-    <h2>My instances</h2>
+    <h2 id="instances">My instances</h2>
     <ul>
         <li>
             <a href="https://search.futureofthe.tech">SearxNg</a>
