added matrix contact

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ $articles = array_reverse($articles);
         <li><a href="https://signal.me/#eu/F5CqLbRjbB-Sl8nL-6HtD3Sg7zbbUq4TcQWOp56-ygzyYVoVm0NIxpZAgwTAka4u">Signal</a>
         </li>
         <li><a href="https://t.me/judemont">Telegram</a></li>
+        <li><a href="https://matrix.to/#/@jdm:futureofthe.tech">Matrix</a></li>
         <li><a href="mailto:julien@rmbi.ch">eMail</a></li>
     </ul>
     <br>
