add descriptions for SearXNG and Piped in the projects section; update CSS for list item spacing

--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@ $articles = array_reverse($articles);
     <ul>
         <li>
             <a href="https://search.futureofthe.tech">SearxNg</a>
+            - SearXNG is a free internet metasearch engine which aggregates results from various search services and
+            databases. Users are neither tracked nor profiled.
         </li>
         <li>
             <a href="https://piped.futureofthe.tech">Piped</a>
+            - An alternative privacy-friendly YouTube frontend which is efficient by design.
         </li>
     </ul>
     <br>
