--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ $articles = array_reverse($articles);
     <ul>
         <li><a href="#social">Social</a></li>
         <li><a href="#about">About Me</a></li>
-        <li><a href="#blog">Articles by me</a></li>
+        <li><a href="#blog">My Blog</a></li>
         <li><a href="#instances">Instances</a></li>
         <li><a href="#projects">My Projects</a></li>
         <li><a href="#things">Things I Use</a></li>
@@ -66,11 +66,11 @@ $articles = array_reverse($articles);
         I believe that many people are aware of these issues. My goal is to imagine <b>solutions</b>.
     </p>
     <br>
-    <h2 id="blog">Articles by <i>Me</i></h2>
+    <h2 id="blog">My Blog</h2>
     <p>I've written a few articles on interesting subjects. You can find them on my <a href="blog/">blog</a>.</p>
     <p><a href="blog/articles.xml">RSS feed</a></p>
     <br>
-    <h2 id="instances">My instances</h2>
+    <h2 id="instances">My Instances</h2>
     <ul>
         <li>
             <a href="https://search.futureofthe.tech">SearxNg</a>
