--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@ $articles = array_reverse($articles);
             <a href="https://piped.futureofthe.tech">Piped</a>
             - An alternative privacy-friendly YouTube frontend which is efficient by design.
         </li>
+        <li>
+            <a href="https://speed.futureofthe.tech/">MySpeed</a>
+            - SpeedTest.
+        </li>
     </ul>
     <br>
     <h2 id="projects">My Projects</h2>
