--- a/public/donate/index.html
+++ b/public/donate/index.html
@@ -245,7 +245,7 @@ function toggleThemeListener() {
 </a>
 
 <script>
-  (function() {
+  (function () {
      
     const disableThemeToggle = '' == '1';
     if (disableThemeToggle) {
@@ -317,8 +317,7 @@ function toggleThemeListener() {
 
 
 
-<script src="/js/medium-zoom.min.js" data-no-instant
-></script>
+<script src="/js/medium-zoom.min.js" data-no-instant></script>
 </body>
 
 </html>
