--- a/public/index.html
+++ b/public/index.html
@@ -341,7 +341,7 @@ As a computer science student I use my skills in this field to innovate and crea
 </a>
 
 <script>
-  (function() {
+  (function () {
      
     const disableThemeToggle = '' == '1';
     if (disableThemeToggle) {
@@ -413,8 +413,7 @@ As a computer science student I use my skills in this field to innovate and crea
 
 
 
-<script src="/js/medium-zoom.min.js" data-no-instant
-></script>
+<script src="/js/medium-zoom.min.js" data-no-instant></script>
 </body>
 
 </html>
