--- a/public/index.html
+++ b/public/index.html
@@ -191,6 +191,11 @@ function toggleThemeListener() {
                 </a>
             </li>
             <li>
+                <a href="https://futureofthe.tech/about/" title="About me"
+                >About me
+                </a>
+            </li>
+            <li>
                 <a href="https://futureofthe.tech/donate/" title="Donate"
                 >Donate
                 </a>
