--- a/public/donate/index.html
+++ b/public/donate/index.html
@@ -201,6 +201,11 @@ function toggleThemeListener() {
                 </a>
             </li>
             <li>
+                <a href="https://futureofthe.tech/bookmarks/" title="Bookmarks"
+                >Bookmarks
+                </a>
+            </li>
+            <li>
                 <a href="https://futureofthe.tech/about/" title="About me"
                 >About me
                 </a>
