--- a/public/about/index.html
+++ b/public/about/index.html
@@ -254,6 +254,11 @@ function toggleThemeListener() {
                 </a>
             </li>
             <li>
+                <a href="https://futureofthe.tech/bookmarks/" title="Bookmarks"
+                >Bookmarks
+                </a>
+            </li>
+            <li>
                 <a href="https://futureofthe.tech/about/" title="About me" class="active"
                 >About me
                 </a>
