it's better now

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
 <title>JdM&#39;s Site</title>
-
+<meta name="keywords" content="Blog, Julien de Montmollin, judemont, Jdm">
 <meta name="description" content="I create digital solutions optimized for computers, comfortable for users and innovative for the world.">
 <meta name="author" content="JdM">
 <link rel="canonical" href="https://futureofthe.tech/">
