--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
       <a
         class="primary-link h-8 w-8 text-[0] [background:var(--url)_center_center/cover_no-repeat]"
         style="--url: url(icons/rss.svg);"
-        href="https://futureofthe.tech/atom.xml"
+        href="https://futureofthe.tech/rss.xml"
         target="_blank"
         rel="alternate"
         title="rss"
