--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,8 @@
 <p>Far beyond the digital realm, I want to bring my motivation to the real world by sharing my ideas and my determination to improve the world.</p>
 <p>I would like to build a world of innovation. A more free world. A world where online privacy is not violated. A more prosperous world. A more sustainable world. But also a world of peace.</p>
 <p>A world that would benefit all of humanity.</p>
-<p>I believe that many people are aware of these issues. My goal is to imagine solutions.
+<p>I believe that many people are aware of these issues. My goal is to imagine solutions.</p>
+<p><img src="images/setup.jpg" alt="My setup" />
     </div>
     <nav class="flex justify-start flex-row flex-wrap gap-x-3 dark:invert">
       <a
