--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://futureofthe.tech/blog/"
+            href="https://futureofthe.tech/posts/"
           >Blog</a>
         </li>
         <li>
@@ -206,7 +206,7 @@
     datetime="PT0H5M0S">5&nbsp;min</time>
 </div>
 
-  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/blog/can-a-website-save-the-world/">Can a Website Save the WORLD ?</a>
+  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/posts/can-a-website-save-the-world/">Can a Website Save the WORLD ?</a>
 </section>
 <section
   class="block-bg relative mb-4 rounded-lg p-4 first-of-type:mt-0 last-of-type:mb-0 active:scale-95 lg:mb-6 lg:p-6"
@@ -224,7 +224,7 @@
     datetime="PT0H14M0S">14&nbsp;min</time>
 </div>
 
-  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/blog/the-website-we-created-to-give-a-voice-to-the-students-at-my-school/">The website we created to give a voice to the students at my school</a>
+  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/posts/the-website-we-created-to-give-a-voice-to-the-students-at-my-school/">The website we created to give a voice to the students at my school</a>
 </section>
 <section
   class="block-bg relative mb-4 rounded-lg p-4 first-of-type:mt-0 last-of-type:mb-0 active:scale-95 lg:mb-6 lg:p-6"
@@ -242,7 +242,7 @@
     datetime="PT0H8M0S">8&nbsp;min</time>
 </div>
 
-  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/blog/how-web-design-changed-for-me-and-for-the-world/">How Web Design Changed for Me, and for the World</a>
+  <a class="absolute inset-0 text-[0]" href="https://futureofthe.tech/posts/how-web-design-changed-for-me-and-for-the-world/">How Web Design Changed for Me, and for the World</a>
 </section>
 <nav class="mt-16 flex">
 </nav>
