--- a/public/404.html
+++ b/public/404.html
@@ -73,7 +73,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://futureofthe.tech/blog/"
+            href="https://futureofthe.tech/posts/"
           >Blog</a>
         </li>
         <li>
